Updated some devise files, more to come

--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -43,7 +43,7 @@
                 </table>   
              </div>
             <!-- end latest campaigns widget -->
-            <div class="clear"></div>
+            <div class="clear"></div><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
         </div>
     </div>
     
