--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 <script language="javascript">
 $(function() {
   
@@ -134,63 +135,9 @@ $(function() {
   $(".mask-purchase-order").mask("PO: aaa-999-***");
   $(".mask-percent").mask("99%");
   
-  
-  //===== Dual select boxes =====//
-  
-  $.configureBoxes();
-  
-  
-  //===== Wizards =====//
-  
-  $("#wizard-1").formwizard({
-    formPluginEnabled: true, 
-    validationEnabled: false,
-    focusFirstInput : false,
-    disableUIStyles : true,
-  
-    formOptions :{
-      success: function(data){$("#status-1").fadeTo(500,1,function(){ $(this).html("<span>Form was submitted!</span>").fadeTo(5000, 0); })},
-      beforeSubmit: function(data){$("#w1").html("<span>Form was submitted with ajax. Data sent to the server: " + $.param(data) + "</span>");},
-      resetForm: true
-    }
-  });
-  
-  $("#wizard-2").formwizard({ 
-    formPluginEnabled: true,
-    validationEnabled: true,
-    focusFirstInput : false,
-    disableUIStyles : true,
-  
-    formOptions :{
-      success: function(data){$("#status-2").fadeTo(500,1,function(){ $(this).html("<span>Form was submitted!</span>").fadeTo(5000, 0); })},
-      beforeSubmit: function(data){$("#w2").html("<span>Form was submitted with ajax. Data sent to the server: " + $.param(data) + "</span>");},
-      dataType: 'json',
-      resetForm: true
-    },
-    validationOptions : {
-      rules: {
-        bazinga: "required",
-        email: { required: true, email: true }
-      },
-      messages: {
-        bazinga: "Bazinga. This note is editable",
-        email: { required: "Please specify your email", email: "Correct format is name@domain.com" }
-      }
-    }
-  });
-  
-  $("#wizard-3").formwizard({
-    formPluginEnabled: false, 
-    validationEnabled: false,
-    focusFirstInput : false,
-    disableUIStyles : true
-  });
-  
-  
   //===== Validation engine =====//
   
   $("#validate").validationEngine();
-  
   
   //===== WYSIWYG editor =====//
   
@@ -199,22 +146,7 @@ $(function() {
     height:"100%",
     bodyStyle: "margin: 10px; font: 12px Arial,Verdana; cursor:text"
   });
-  
-  
-  //===== File uploader =====//
-  
-  $("#uploader").pluploadQueue({
-    runtimes : 'html5,html4',
-    url : 'php/upload.php',
-    max_file_size : '1mb',
-    unique_names : true,
-    filters : [
-      {title : "Image files", extensions : "jpg,gif,png"}
-      //{title : "Zip files", extensions : "zip"}
-    ]
-  });
-  
-  
+
   //===== Tags =====//  
     
   $('#tags').tagsInput({width:'100%'});
@@ -224,14 +156,10 @@ $(function() {
   
   $(".auto-growing").autoGrow();
 
-
-
 /* General stuff
 ================================================== */
 
-
   //===== Left navigation styling =====//
-  
   $('li.this').prev('li').css('border-bottom-color', '#2c3237');
   $('li.this').next('li').css('border-top-color', '#2c3237');
   
@@ -257,7 +185,6 @@ $(function() {
     $(this).parent().prev('li').children("a").removeClass('bottomBorder'); 
     }
   );*/
-  
   
   //===== User nav dropdown =====//   
   
@@ -314,7 +241,6 @@ $(function() {
   });
   
   
-  
   //===== Collapsible elements management =====//
   
   $('.exp').collapsible({
@@ -353,9 +279,6 @@ $(function() {
     if (! $clicked.parents().hasClass("responsive-menu"))
     $(".resp-menu").slideUp(200);
   });*/
-
-
-
   
   //===== Middle navigation dropdowns =====//
   
@@ -432,8 +355,6 @@ $(function() {
   
   $('#check-all-box tbody tr td:first-child').next('td').css('border-left-color', '#CBCBCB');
   
-  
-  
   //===== Resizable columns =====//
   
   $("#res, #res1").colResizable({
@@ -441,13 +362,9 @@ $(function() {
     draggingClass:"dragging" 
   });
     
-    
-    
   //===== Sortable columns =====//
   
   $("table").tablesorter();
-  
-  
   
   //===== Dynamic data table =====//
   
@@ -458,218 +375,13 @@ $(function() {
   });
 
 
-
-
-
-/* # Pickers
-================================================== */
-
-
-  //===== Color picker =====//
-  
-  $('#cPicker').ColorPicker({
-    color: '#000',
-    onShow: function (colpkr) {
-      $(colpkr).fadeIn(500);
-      return false;
-    },
-    onHide: function (colpkr) {
-      $(colpkr).fadeOut(500);
-      return false;
-    },
-    onChange: function (hsb, hex, rgb) {
-      $('#cPicker div').css('backgroundColor', '#' + hex);
-    }
-  });
-  
-  $('#flatPicker').ColorPicker({flat: true});
-  
-  
-  
-  //===== Time picker =====//
-  
-  $('.time-picker').timeEntry({
-    show24Hours: true, // 24 hours format
-    showSeconds: true, // Show seconds?
-    spinnerImage: 'images/forms/spinnerUpDown.png', // Arrows image
-    spinnerSize: [19, 30, 0], // Image size
-    spinnerIncDecOnly: true // Only up and down arrows
-  });
-  
-  
-  //===== Datepickers =====//
-  
-  $( ".datepicker" ).datepicker({ 
-    defaultDate: +7,
-    autoSize: true,
-    appendText: '(dd-mm-yyyy)',
-    dateFormat: 'dd-mm-yy',
-  }); 
-  
-  $( ".datepickerInline" ).datepicker({ 
-    defaultDate: +7,
-    autoSize: true,
-    appendText: '(dd-mm-yyyy)',
-    dateFormat: 'dd-mm-yy',
-    numberOfMonths: 1
-  }); 
-
-
-//===== Progress bars =====//
-  
-  // default mode
-  $('#progress-1').anim_progressbar();
-  
-  // from second #5 till 15
-  var iNow = new Date().setTime(new Date().getTime() + 5 * 1000); // now plus 5 secs
-  var iEnd = new Date().setTime(new Date().getTime() + 15 * 1000); // now plus 15 secs
-  $('#progress-2').anim_progressbar({start: iNow, finish: iEnd, interval: 1});
-  
-  // jQuery UI progress bar
-  $( "#progress" ).progressbar({
-      value: 80
-  });
-  
-  
-  
-  //===== Animated progress bars =====//
-  
-  var percent = $('.progress-defaul').attr('title');
-  $('.progress-defaul').animate({width: percent},1000);
-  
-  var percent = $('.progressO').attr('title');
-  $('.progressO').animate({width: percent},1000);
-  
-  var percent = $('.progressB').attr('title');
-  $('.progressB').animate({width: percent},1000);
-  
-  var percent = $('.progressR').attr('title');
-  $('.progressR').animate({width: percent},1000);
-  
-  
-  
-  
-  var percent = $('#bar1').attr('title');
-  $('#bar1').animate({width: percent},1000);
-  
-  var percent = $('#bar2').attr('title');
-  $('#bar2').animate({width: percent},1000);
-  
-  var percent = $('#bar3').attr('title');
-  $('#bar3').animate({width: percent},1000);
-  
-  var percent = $('#bar4').attr('title');
-  $('#bar4').animate({width: percent},1000);
-  
-  var percent = $('#bar5').attr('title');
-  $('#bar5').animate({width: percent},1000);
-
-  var percent = $('#bar6').attr('title');
-  $('#bar6').animate({width: percent},1000);
-
-  var percent = $('#bar7').attr('title');
-  $('#bar7').animate({width: percent},1000);
-
-  var percent = $('#bar8').attr('title');
-  $('#bar8').animate({width: percent},1000);
-
-  var percent = $('#bar9').attr('title');
-  $('#bar9').animate({width: percent},1000);
-
-
-
-
-/* Other plugins
-================================================== */
-
-
-  //===== File manager =====//
-  
-  $('#fm').elfinder({
-    url : 'php/connector.php',
-  });
-
-  
-  //===== Calendar =====//
-  
-  var date = new Date();
-  var d = date.getDate();
-  var m = date.getMonth();
-  var y = date.getFullYear();
-  
-  $('.calendar').fullCalendar({
-    header: {
-      left: 'prev,next',
-      center: 'title',
-      right: 'month,basicWeek,basicDay'
-    },
-    editable: true,
-    events: [
-      {
-        title: 'All day event',
-        start: new Date(y, m, 1)
-      },
-      {
-        title: 'A Very Long event',
-        start: new Date(y, m, 5),
-        end: new Date(y, m, 8)
-      },
-      {
-        id: 999,
-        title: 'Repeating event',
-        start: new Date(y, m, 2, 16, 0),
-        end: new Date(y, m, 3, 18, 0),
-        allDay: false
-      },
-      {
-        id: 999,
-        title: 'Repeating event',
-        start: new Date(y, m, 9, 16, 0),
-        end: new Date(y, m, 10, 18, 0),
-        allDay: false
-      },
-      {
-        title: 'Background color could be changed',
-        start: new Date(y, m, 30, 10, 30),
-        end: new Date(y, m, d+1, 14, 0),
-        allDay: false,
-        color: '#000000'
-      },
-      {
-        title: 'Lunch',
-        start: new Date(y, m, 14, 12, 0),
-        end: new Date(y, m, 15, 14, 0),
-        allDay: false
-      },
-      {
-        title: 'Boss Birthday Party',
-        start: new Date(y, m, 18),
-        end: new Date(y, m, 20),
-        allDay: false
-      },
-      {
-        title: 'We Love ThemesHub',
-        start: new Date(y, m, 27),
-        end: new Date(y, m, 29),
-        url: 'http://themeforest.net/user/ThemesHub'
-      }
-    ]
-  });
-  
-  
-  
-  
 /* UI stuff
 ================================================== */
-
-
   //===== Sparklines =====//
   
   $('.negBar').sparkline('html', {type: 'bar', barColor: '#cb3030'} );
   $('.posBar').sparkline('html', {type: 'bar', barColor: '#9cdc4f'} );
   $('.zeroBar').sparkline('html', {type: 'bar', barColor: '#0FA1E3'} ); 
-  
-  
   
   //===== Tooltips =====//
   
@@ -677,8 +389,6 @@ $(function() {
   $('.tipS').tipsy({gravity: 's',fade: true});
   $('.tipW').tipsy({gravity: 'w',fade: true});
   $('.tipE').tipsy({gravity: 'e',fade: true});
-  
-    
   
   //===== Accordion =====//   
   
@@ -689,7 +399,6 @@ $(function() {
     $(this).css({color:"#2B6893"}).next("div.menu_body").slideToggle(300).siblings("div.menu_body").slideUp("slow");
     $(this).siblings().css({color:"#404040"});
   });
-  
   
   //===== Tabs =====//
     
@@ -711,8 +420,6 @@ $(function() {
   };
   $("div[class^='widget']").contentTabs(); //Run function on any div with class name of "Content Tabs"
   
-  
-  
   //===== Notification boxes =====//
   
   $(".hide-me").click(function() {
@@ -723,13 +430,9 @@ $(function() {
     });
   }); 
   
-  
-  
   //===== Lightbox =====//
   
   $("a[rel^='lightbox']").prettyPhoto();
-  
-  
   
   //===== Image gallery control buttons =====//
   
@@ -737,7 +440,6 @@ $(function() {
     function() { $(this).children(".actions").show("fade", 200); },
     function() { $(this).children(".actions").hide("fade", 200); }
   );
-  
   
   //===== Spinner options =====//
   
@@ -779,7 +481,6 @@ $(function() {
   });
   
   
-  
   //===== UI dialog =====//
   
   $( "#dialog-message" ).dialog({
@@ -797,14 +498,10 @@ $(function() {
     return false;
   }); 
     
-  
-  
   //===== Breadcrumbs =====//
   
   $('#breadcrumbs').xBreadcrumbs();
   
-    
-    
   //===== jQuery UI sliders =====// 
   
   $( ".uiSlider" ).slider(); /* Usual slider */
@@ -857,12 +554,9 @@ $(function() {
   });
   $( "#maxRangeAmount" ).val( $( ".uiMaxRange" ).slider( "value" ) ); 
 
-
   //===== Form elements styling =====//
   
   $("select, input:checkbox, input:radio, input:file").uniform();
-
-  
 });
 </script>
 
@@ -879,7 +573,6 @@ $(function() {
 <div id="footer">
    <div class="wrapper"></div>
 </div>
-
 
 </body>
 </html>
