fixes sign_in devise issues, also created a new layout for the login page.  Created a new simple_form_wrapper (see config/initializers/simple_form,rb for more info)

--- a/app/views/campaigns/_form.html.erb
+++ b/app/views/campaigns/_form.html.erb
@@ -28,7 +28,7 @@
 
             <fieldset>
                 <div class="widget">
-                    <div class="title"><img src="images/icons/light/list.png" alt="" class="title-icon" /><h6>Input text fields</h6></div>
+                    <div class="title"><img src="/assets/icons/light/list.png" alt="" class="title-icon" /><h6>Input text fields</h6></div>
                    
                     <%= f.input :subject, :wrapper => :theme_input %>
 
