--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -287,7 +287,7 @@ select[multiple] {
 .login-wrapper {
 	margin: -119px 0 0 -170px;
 	position: absolute;
-	top: 50%;
+	top: 30%;
 	left: 50%;
 }
 
@@ -2846,7 +2846,7 @@ html ul.tabs li.activeTab a {
 	font-size: 11px;
 }
 
-.note-warning {
+.note-alert {
 	background: #FDF5D9 url(/assets/icons/notifications/error.png) no-repeat 15px center;
 	border: 1px solid #FCEEC1;
 	color: #404040;
